# promptworks

./: .gitignore  pyproject.toml
examples/: demo.py  history.py  oai.py
src/promptworks/: __init__.py  elements.py  evaluator.py  interfaces.py  prompt.py
src/promptworks/components/: chathistoryitem.py  localfile.py  localtime.py  plaintext.py
src/promptworks/nodes/: basecomponent.py  functionalcomponent.py
src/promptworks/primatives/: __init__.py  baseprimative.py  imageprimative.py  textprimative.py  treenodeprimative.py
src/promptworks/renderer/: __init__.py  base.py  tree.py
src/promptworks/renderers/: __init__.py  openaichatrenderer.py  treerenderer.py
tests/: test_components_localfile.py  test_components_localtime.py  test_compontents_plaintext.py  test_prompt.py  test_prompt_history.py
